--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,17 +3,27 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-<!--   <display-name>Archetype Created Web Application</display-name>
+  <display-name>Archetype Created Web Application</display-name>
   <servlet>
   	<servlet-name>RegController</servlet-name>
   	<display-name>RegController</display-name>
   	<description></description>
   	<servlet-class>controller.RegController</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>loginController</servlet-name>
+  	<display-name>loginController</display-name>
+  	<description></description>
+  	<servlet-class>controller.loginController</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>RegController</servlet-name>
   	<url-pattern>/RegController</url-pattern>
-  </servlet-mapping> -->
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>loginController</servlet-name>
+  	<url-pattern>/loginController</url-pattern>
+  </servlet-mapping>
 <!--   <servlet>
   	<servlet-name>CheckEmailController</servlet-name>
   	<display-name>CheckEmailController</display-name>
