--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,18 @@
   	<description></description>
   	<servlet-class>controller.loginController</servlet-class>
   </servlet>
+<!--   <servlet>
+  	<servlet-name>header</servlet-name>
+  	<display-name>header</display-name>
+  	<description></description>
+  	<servlet-class>util.header</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>Footer</servlet-name>
+  	<display-name>Footer</display-name>
+  	<description></description>
+  	<servlet-class>util.Footer</servlet-class>
+  </servlet> -->
   <servlet-mapping>
   	<servlet-name>RegController</servlet-name>
   	<url-pattern>/RegController</url-pattern>
@@ -24,6 +36,14 @@
   	<servlet-name>loginController</servlet-name>
   	<url-pattern>/loginController</url-pattern>
   </servlet-mapping>
+<!--   <servlet-mapping>
+  	<servlet-name>header</servlet-name>
+  	<url-pattern>/header</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>Footer</servlet-name>
+  	<url-pattern>/Footer</url-pattern>
+  </servlet-mapping> -->
 <!--   <servlet>
   	<servlet-name>CheckEmailController</servlet-name>
   	<display-name>CheckEmailController</display-name>
