--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,16 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+ <!--  <servlet>
+  	<servlet-name>GetOneUserData</servlet-name>
+  	<display-name>GetOneUserData</display-name>
+  	<description></description>
+  	<servlet-class>controller.GetOneUserData</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>GetOneUserData</servlet-name>
+  	<url-pattern>/GetOneUserData</url-pattern>
+  </servlet-mapping> -->
 <!--   <servlet>
   	<servlet-name>ShowAllUser</servlet-name>
   	<display-name>ShowAllUser</display-name>
